syntax = "proto3";

package auth;

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc GetUserById(GetUserByIdRequest) returns (GetUserResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string username = 3;
}

message RegisterResponse {
  bool success = 1;
  string user_id = 2;
  string message = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string access_token = 2;
  string user_id = 3;
  string message = 4;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string user_id = 2;
  string email = 3;
}

message GetUserByIdRequest {
  string user_id = 1;
}

message GetUserResponse {
  string id = 1;
  string email = 2;
  string created_at = 3;
}

